force-app/main/default/objects/Inning__c/fields/BattingTeam__c.field-meta.xml
<CustomField>
    <fullName>BattingTeam__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Batting Team</label>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Innings</relationshipLabel>
    <relationshipName>Innings</relationshipName>
    <type>Lookup</type>
</CustomField>