force-app/main/default/objects/Inning__c/fields/BowlingTeam__c.field-meta.xml
<CustomField>
    <fullName>BowlingTeam__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bowling Team</label>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Innings (Bowling Team)</relationshipLabel>
    <relationshipName>Innings1</relationshipName>
    <type>Lookup</type>
</CustomField>