force-app/main/default/objects/Inning__c/fields/CurrentBowler__c.field-meta.xml
<CustomField>
    <fullName>CurrentBowler__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Bowler</label>
    <referenceTo>GamePlayer__c</referenceTo>
    <relationshipLabel>Innings (Bowler)</relationshipLabel>
    <relationshipName>Innings2</relationshipName>
    <type>Lookup</type>
</CustomField>