force-app/main/default/objects/Inning__c/fields/CurrentOver__c.field-meta.xml
<CustomField>
    <fullName>CurrentOver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Over</label>
    <referenceTo>Over__c</referenceTo>
    <relationshipLabel>Innings</relationshipLabel>
    <relationshipName>Innings</relationshipName>
    <type>Lookup</type>
</CustomField>