force-app/main/default/objects/Inning__c/fields/InningsFinished__c.field-meta.xml
<CustomField>
    <fullName>InningsFinished__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Innings Finished</label>
    <type>Checkbox</type>
</CustomField>