force-app/main/default/objects/Inning__c/fields/InningsNumber__c.field-meta.xml
<CustomField>
    <fullName>InningsNumber__c</fullName>
    <label>Innings Number</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inning 1</fullName>
            </value>
            <value>
                <fullName>Inning 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>