force-app/main/default/objects/Inning__c/fields/Match__c.field-meta.xml
<CustomField>
    <fullName>Match__c</fullName>
    <label>Match</label>
    <referenceTo>Game__c</referenceTo>
    <relationshipLabel>Innings</relationshipLabel>
    <relationshipName>Innings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>