force-app/main/default/objects/Inning__c/fields/NonStriker__c.field-meta.xml
<CustomField>
    <fullName>NonStriker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Non Striker</label>
    <referenceTo>GamePlayer__c</referenceTo>
    <relationshipLabel>Innings (Non Striker)</relationshipLabel>
    <relationshipName>Innings1</relationshipName>
    <type>Lookup</type>
</CustomField>