force-app/main/default/objects/Inning__c/fields/OngoingOver__c.field-meta.xml
<CustomField>
    <fullName>OngoingOver__c</fullName>
    <formula>TEXT( CurrentOver__r.CurrentOverNumber__c )</formula>
    <label>Ongoing Over Number</label>
    <type>Text</type>
</CustomField>