force-app/main/default/objects/Inning__c/fields/OversCompleted__c.field-meta.xml
<CustomField>
    <fullName>OversCompleted__c</fullName>
    <label>Overs Completed</label>
    <summaryFilterItems>
        <field>Over__c.OverFinished__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Over__c.Inning__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>