force-app/main/default/objects/Inning__c/fields/PreviousBowler__c.field-meta.xml
<CustomField>
    <fullName>PreviousBowler__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Bowler</label>
    <referenceTo>GamePlayer__c</referenceTo>
    <relationshipLabel>Innings (Previous Bowler)</relationshipLabel>
    <relationshipName>Innings3</relationshipName>
    <type>Lookup</type>
</CustomField>