force-app/main/default/objects/Inning__c/fields/Striker__c.field-meta.xml
<CustomField>
    <fullName>Striker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Striker</label>
    <referenceTo>GamePlayer__c</referenceTo>
    <relationshipLabel>Innings</relationshipLabel>
    <relationshipName>Innings</relationshipName>
    <type>Lookup</type>
</CustomField>