force-app/main/default/objects/Inning__c/fields/TotalExtras__c.field-meta.xml
<CustomField>
    <fullName>TotalExtras__c</fullName>
    <label>Total Extras</label>
    <summarizedField>Extras__c.RunsInExtras__c</summarizedField>
    <summaryForeignKey>Extras__c.Inning__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>