force-app/main/default/objects/Inning__c/fields/TotalRuns__c.field-meta.xml
<CustomField>
    <fullName>TotalRuns__c</fullName>
    <label>Total Runs</label>
    <summarizedField>Over__c.TotalRuns__c</summarizedField>
    <summaryForeignKey>Over__c.Inning__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>