force-app/main/default/objects/Inning__c/fields/TotalWickets__c.field-meta.xml
<CustomField>
    <fullName>TotalWickets__c</fullName>
    <label>Total Wickets</label>
    <summaryForeignKey>Wicket__c.Inning__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>