force-app/main/default/objects/Inning__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BattingTeam__c</columns>
    <columns>BowlingTeam__c</columns>
    <columns>InningsNumber__c</columns>
    <columns>Match__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>